--- a/package.json
+++ b/package.json
@@ -11,8 +11,16 @@
   "dependencies": {
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.2",
+    "flowbite": "^1.5.3",
+    "flowbite-react": "^0.3.4",
     "next": "13.0.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "typewriter-effect": "^2.19.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.18",
+    "tailwindcss": "^3.2.2"
   }
 }
