--- a/package.json
+++ b/package.json
@@ -11,8 +11,6 @@
   "dependencies": {
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.2",
-    "flowbite": "^1.5.3",
-    "flowbite-react": "^0.3.4",
     "next": "13.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -20,6 +18,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
+    "daisyui": "^2.6.0",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.2.2"
   }
